<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">iFantasy</string>
    <string name="play_off">开始游戏</string>
    <string name="prompt_phone">手机号码</string>
    <string name="get_code">获取验证码</string>
    <string name="prompt_code">验证码</string>
    <string name="verify_wait">"验证码已发送至%s，%2ds后可再次获取"</string>
    <string name="verify_resend">""验证码已发送至%s，重新获取"</string>
    <string name="login">登录</string>
    <string name="resend">重试</string>
    <string name="app_version">v1.0.0</string>
    <string name="one_recruit">再招募%d次，必得评分70+的球员</string>
    <string name="level">Lv%d</string>
    <string name="vip_level">Vip%d</string>
    <string name="money">%d万</string>
    <string name="one_recruit_time">%s之后免费</string>
    <string name="one_lucky_recruit_price">100万</string>
    <string name="lucky_recruit">幸运招募</string>
    <string name="yes">确定</string>
    <string name="team_name">球队/%s</string>
    <string name="cloth_num">球衣号/%d号</string>
    <string name="pos">位置/%s</string>
    <string name="score">评分/%d</string>
    <string name="salary">薪资/%d万</string>
    <string name="body_measure">身高/%.2fm&#160;&#160;臂展/%.2fm&#160;&#160;站立摸高/%.2fm&#160;&#160;体重/%dkg</string>
</resources>
